[package]
name = "exaloglog"
version = "0.1.0"
edition = "2024"
description = "Standalone Rust implementation prototype of the ExaLogLog approximate distinct counter"
keywords = ["exaloglog", "cardinality", "sketch", "distinct-count", "probabilistic"]
categories = ["algorithms", "data-structures"]

[lib]
name = "exaloglog"

[dependencies]
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh3"] }

[dev-dependencies]
ahash = "0.8"
komihash = "0.4.1"
polymur-hash = "0.2.2"
tab-hash = "0.3.0"
t1ha = "0.1.2"
wyhash = "0.6.0"
