[package]
name = "exaloglog-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ahash = "0.8"
exaloglog = { path = ".." }
komihash = "0.4.1"
polymur-hash = "0.2.2"
tab-hash = "0.3.0"
t1ha = "0.1.2"
ultraloglog = { git = "https://github.com/waynexia/ultraloglog" }
wyhash = "0.6.0"
